Fix banner height on mobile

--- a/style.css
+++ b/style.css
@@ -306,8 +306,8 @@ nav ul li {
 /* END NAV BAR */
 
 .banner {
-  padding-top: 130px;
-  padding-bottom: 185px;
+  padding-top: 155px;
+  padding-bottom: 210px;
   color: #ffffff;
   width: 100%;
   background: url("img/home-bg.png") no-repeat center center fixed;
@@ -522,8 +522,8 @@ footer.second {
   }
 
   .banner {
-    padding-top: 140px;
-    padding-bottom: 105px;
+    padding-top: 160px;
+    padding-bottom: 125px;
     background: url("img/home-bg.png") no-repeat 45% 13% fixed;
     color: #ffffff;
     width: 100%;
@@ -573,8 +573,8 @@ and (max-device-width : 667px) {
     margin: 0 auto;
   }
   .banner {
-    padding-top: 210x;
-    padding-bottom: 125px;
+    padding-top: 220x;
+    padding-bottom: 130px;
     color: #ffffff;
     width: 100%;
   }
